--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,6 @@
 @import "./prime-react-custom.scss";
+@import "./variables.scss";
+@import "./table";
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -16,7 +18,7 @@ body {
   overflow: hidden;
   scroll-behavior: smooth;
   height: 100vh;
-  font-size: 14px;
+  font-size: 14px !important;
   font-weight: 500;
   color: #1a181e;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -174,4 +176,8 @@ body {
     padding-left: 0.25rem;
     font-weight: 500;
   }
+}
+
+.text-underline {
+  text-decoration: underline;
 }
